--- a/CLIENT/src/Components/Boards/NoticeBoard.module.css
+++ b/CLIENT/src/Components/Boards/NoticeBoard.module.css
@@ -42,6 +42,10 @@
     justify-content: space-between;
 
 }
+.redirection_link {
+    color: black !important;
+    text-decoration: none !important;
+}
 .feeds>div:nth-child(2) {
 
     padding: 10px;
